2010-01-11  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=33481
        Uninitialized data members in ArrayStorage

        SunSpider reports no change.

        * runtime/JSArray.cpp:
        (JSC::JSArray::JSArray): Initialize missing data members in the two cases
        where we don't use fastZeroedMalloc, so it doesn't happen automatically.


Canonical link: https://commits.webkit.org/44499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53091 268f45cc-cd09-0410-ab3c-d52691b4dbfc